NEW updating directory names

--- a/_config/whitelist.yml
+++ b/_config/whitelist.yml
@@ -6,4 +6,4 @@ SiteTree:
   extensions:
     - SiteTreeWhitelistExtension
 WhitelistGenerator:
-  dir: 'routeWhitelistCache'
+  dir: 'routewhitelistcache'
