Adding the ability to include or exclude certain values from the whitelist

--- a/_config/whitelist.yml
+++ b/_config/whitelist.yml
@@ -8,3 +8,6 @@ SiteTree:
 WhitelistGenerator:
   dir: 'routewhitelistcache'
   includeSiteTreeVersions: true
+  addToWhitelist:
+    - "home"
+  removeFromWhitelist:
